@@ -13,6 +13,7 @@ import java.awt.*;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.nio.file.Files;
 import java.util.Optional;
@@ -31,9 +32,16 @@ public class LogoService {
         if (byId.isPresent()) {
             String imageFileName = byId.get().getLogoFileName();
             try {
-                File imageFile = ResourceUtils.getFile("classpath:logos/" + imageFileName);
-                byte[] bytes = Files.readAllBytes(imageFile.toPath());
-                return Optional.of(new ByteArrayResource(bytes));
+                //File imageFile = ResourceUtils.getFile("classpath:logos/" + imageFileName);
+//                byte[] bytes = Files.readAllBytes(imageFile.toPath());
+//                return Optional.of(new ByteArrayResource(bytes));
+
+                InputStream resourceAsStream = this.getClass().getResourceAsStream(imageFileName);
+                byte[] bytes2 =  resourceAsStream.readAllBytes();
+                return Optional.of(new ByteArrayResource(bytes2));
+
+//                InputStream systemResourceAsStream = ClassLoader.getSystemResourceAsStream(imageFileName);
+
             } catch (IOException e) {
                 System.out.println("Picture loading exception: " + e);
                 return Optional.empty();
